<resources>
	<string name="about_x_kilometers">ca. %.1f km</string>
	<string name="action_add">Write message</string>
	<string name="action_add_favorite">Add to favorites</string>
	<string name="action_add_subscription">Subscribe to comments</string>
	<string name="action_customize">Customize</string>
	<string name="action_help">Help</string>
	<string name="action_help_summary">Do you have any questions about this app? Read our detailed explanations here.</string>
	<string name="action_invite">Invite friends</string>
	<string name="action_invite_promo">Are your friends on Faceless yet?</string>
	<string name="action_invite_summary">On Faceless, your friends will never see your name. This makes conversations honest and entertaining.</string>
	<string name="action_loading">Loading &#8230;</string>
	<string name="action_notification_count">New notifications</string>
	<string name="action_remove_favorite">Remove from favorites</string>
	<string name="action_remove_subscription">Unsubscribe from comments</string>
	<string name="action_report">Report message</string>
	<string name="action_settings">Settings</string>
	<string name="action_share_picture">Share as picture</string>
	<string name="app_name">Faceless</string>
	<string name="app_rater_explanation">How do you like this app? We would be very happy if you could rate our application on Google Play. Thanks for your support!</string>
	<string name="app_rater_later">Later</string>
	<string name="app_rater_never">No, thanks</string>
	<string name="app_rater_now">Rate now</string>
	<string name="app_rater_title">Rate this app</string>
	<string name="background">Background</string>
	<string name="block_user_added">You will no longer receive messages from this user</string>
	<string name="cancel">Cancel</string>
	<string name="choose_topic_help">What topic do you want to write something about? Your choice helps others to see only the content they\'re interested in.</string>
	<string name="choose_visibility_help">Who do you want to share your message with? In any case, nobody will be able to see who you are. Messages on Faceless are always anonymous.</string>
	<string name="comment_add_hint">Your comment &#8230;</string>
	<string name="comment_confirm_public_body">Do you want to publish this comment for all users?\n\nIf you want to reply to somebody privately instead, please tap on the respective comment.</string>
	<string name="comment_confirm_public_title">Public comment</string>
	<string name="comment_options">Comment options</string>
	<string name="comments">Comments</string>
	<string name="country">Country</string>
	<string name="degree_author">Author</string>
	<string name="degree_example">Example</string>
	<string name="degree_friend">Friend</string>
	<string name="degree_friend_of_friend">Friend of a friend</string>
	<string name="degree_self">You</string>
	<string name="degree_worldwide">Worldwide</string>
	<string name="enable_location_caption">Share with people nearby</string>
	<string name="enable_location_help">Do you want to share your message and the <b>approximate</b> location with people nearby?</string>
	<string name="error_bad_request">Your request could not be handled by the server</string>
	<string name="error_maintenance">Faceless is out of service for a short time</string>
	<string name="error_no_connection">Please check your internet connection</string>
	<string name="error_outdated_client">Please update Faceless to the latest version via Google Play</string>
	<string name="error_temporarily_banned">You have been temporarily banned due to reports by other persons</string>
	<string name="example_message_explanation">This is an example: Just start by writing your own message</string>
	<string-array name="example_messages">
		<item>Have been drawing for years, but never shown to anyone.</item>
		<item>For the last three weeks, I\'ve slept in my car.</item>
		<item>Nobody at work knows that I\'ve been in jail.</item>
		<item>I always eat the food I\'m buying when I\'m still in the supermarket.</item>
		<item>I\'m in love with my best friend.</item>
		<item>My hair looks better when not washed for some days.</item>
		<item>Just been on vacation with my wife for the first time.</item>
		<item>My boyfriend still hasn\'t met my parents.</item>
		<item>Every day, I consider quitting my job and moving to another city.</item>
		<item>Is anybody out there truthfully happy?</item>
		<item>Whenever I read wedding announcements in the paper, I become jealous.</item>
	</string-array>
	<string name="general_settings">General settings</string>
	<string name="intro">Welcome</string>
	<string-array name="introduction_steps">
		<item>Faceless is where you can talk freely.\n\nShare messages with your friends and the whole world.</item>
		<item>You can be open, no matter what you talk about.\n\nNobody will see who you are — it\'s only about your words.</item>
		<item>You won\'t have to manage a friends list on Faceless.\n\nYou will be connected to your contacts automatically.</item>
		<item>Remember, everything is shared anonymously.\n\nPeople will see your messages, but they won\'t know who you are.</item>
		<item>This app is no place for bullying, harassment or negativity.\n\nGet started by writing your first message on the next screen.</item>
	</string-array>
	<string name="invitation_title">Get Faceless</string>
	<string name="invite_x_friends_to_see_message">Invite %d friends in order to see this message</string>
	<string name="language">Language</string>
	<string name="learn_more">Learn more</string>
	<string name="login_throttled_body">There have been too many failed login attempts for your account.\n\nThis may also have been caused by another person who tried to get access to your account.\n\nThus we are now protecting your account and have temporarily locked it.\n\nPlease try again later!</string>
	<string name="login_throttled_title">Account locked</string>
	<string name="mark_all_read">Mark all as read</string>
	<string name="message">Message</string>
	<string-array name="meta_about">
		<item>Faceless is where you can talk freely, to your friends and the whole world.</item>
		<item>You can be open, no matter what you talk about. Nobody will see who you are — it\'s only about your message.</item>
		<item>Enjoy openness and kindness. Get truthful responses and honest opinions. Let your ideas spread around the world.</item>
		<item>You don\'t have a profile to worry about. There\'s no need to brag. It\'s just your words that count.</item>
		<item>Talk about things that might be embarrassing, and don\'t be afraid to ask a question. Share things without any downsides!</item>
		<item>You will be connected to your friends automatically. Read their messages and write comments — you will never know exactly who they are.</item>
		<item>Share stories, ask questions, discuss life or confess things. Just be yourself.</item>
		<item>Be honest and genuine. Be smart and positive.</item>
	</string-array>
	<string name="meta_open_source_title"><b>This app uses the following third-party components which are available under the terms of open-source licenses:</b></string>
	<string-array name="meta_permissions_body">
		<item>+ \"Read phone status and identity\": Get your phone number, securely encrypt it, and use the encrypted number to anonymously connect you with your friends.</item>
		<item>+ \"Read your contacts\": Get your contacts\' phone numbers, securely encrypt them, and use the encrypted numbers to anonymously connect you with your friends.</item>
		<item>+ \"Full network access\": Send/receive messages, comments and favorites.</item>
		<item>+ \"Run at startup\": Setting up notifications and synchronization again when you had switched off your device.</item>
	</string-array>
	<string name="meta_permissions_title"><b>App permissions:</b></string>
	<string-array name="meta_privacy_body">
		<item>+ We only access your phone number and your contacts\' phone numbers. We don\'t access any names, email addresses or other contact details.</item>
		<item>+ Phone numbers are encrypted with an irreversible one-way encryption (hash function) on your device and only afterwards send to our servers. Real phone numbers never leave your device.</item>
		<item>+ As you can see, we require only those app permissions that are really necessary. No heavy list of extended permissions as with other apps.</item>
	</string-array>
	<string name="meta_privacy_title"><b>Privacy Policy:</b></string>
	<string-array name="meta_questions_answers">
		<item><b>Do I have to sign up for Faceless?</b></item>
		<item>No. You don\'t need an account, neither an email address nor a password. No Facebook, no Google, no Twitter.</item>
		<item><b>Who can see that I am the author of a message?</b></item>
		<item>Nobody. People will only see that you are a \"Friend\" or a \"Friend of a friend\". Otherwise, we may show them your country, but never something specific.</item>
		<item><b>Are comments anonymous as well?</b></item>
		<item>Yes. The only thing that will be shown is whether a comment has been written by the same person who also wrote the original message.</item>
		<item><b>Can I see which of my friends are on Faceless already?</b></item>
		<item>No. This is to protect their privacy. From time to time, we may show you the number of friends, without any names, of course.</item>
		<item><b>Can I ignore or block a particular person?</b></item>
		<item>Yes. If you don\'t like what a person posts, you can add them to your block list. This cannot be undone later, however!</item>
		<item><b>Can I help translate the app?</b></item>
		<item>Yes, that would be great! Please find your language on: https://www.localize.im/v/36</item>
	</string-array>
	<string-array name="meta_security_body">
		<item>+ All communication between the app and our servers is encrypted with SSL/TLS. Before your messages and comments are saved on our servers, they are encrypted again.</item>
		<item>+ No personal information is ever send to any device. Your friends and other users have no way to find out who you are, unless you reveal your identity yourself.</item>
		<item>+ Messages and comments don\'t stay online forever. They will be destroyed after some time automatically.</item>
		<item>+ Even if your friends correctly guessed a message that you wrote, they would still not know about any other message of yours.</item>
		<item>+ Faceless is independent. There is no big company behind and we don\'t try to maximize profits.</item>
	</string-array>
	<string name="meta_security_title"><b>Is Faceless really secure?</b></string>
	<string name="mode_favorites">Saved favorites</string>
	<string name="mode_friends">Friends\' messages</string>
	<string name="mode_latest">Latest messages</string>
	<string name="mode_nearby">Nearby</string>
	<string name="mode_popular">Popular messages</string>
	<string name="more_options">More options</string>
	<string name="next">Next</string>
	<string name="ok">OK</string>
	<string name="save">Save</string>
	<string name="send">Send</string>
	<string name="setup_intro">Please enter your phone number below to finish setup.\n\nStart with a \"+\" followed by your country code (e.g. +41).\n\nAfter that, just enter your local phone number.\n\nPlease double-check that the number is correct!\n\nIf you don\'t enter your correct number, we won\'t be able to connect you to your friends.\n\nOf course, your phone number is secure with us. We respect your privacy!</string>
	<string name="setup_phone_number_hint">Example: +41 1234 56789</string>
	<string name="subscription_notifications">Notifications for unread comments</string>
	<string name="tap_to_change_pattern">Tap to switch the background pattern</string>
	<string name="this_app">This app</string>
	<string name="topics">Topics</string>
	<string name="topics_summary">Which topics do you want to see recent and popular messages for?</string>
	<string name="you_and_friends">You and your friends</string>
</resources>