<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
	    android:id="@+id/action_loading"
	    android:showAsAction="always"
	    android:title="@string/action_loading"
	    android:actionLayout="@layout/ab_loading" />
	<item
	    android:id="@+id/action_add_favorite"
	    android:showAsAction="always"
	    android:title="@string/action_add_favorite"
	    android:icon="@drawable/ic_ab_favorites_add" />
	<item
	    android:id="@+id/action_remove_favorite"
	    android:showAsAction="always"
	    android:title="@string/action_remove_favorite"
	    android:icon="@drawable/ic_ab_favorites_remove" />
	<item
	    android:id="@+id/action_share_picture"
	    android:showAsAction="never"
	    android:title="@string/action_share_picture" />
	<item
	    android:id="@+id/action_add_subscription"
	    android:showAsAction="never"
	    android:title="@string/action_add_subscription" />
	<item
	    android:id="@+id/action_remove_subscription"
	    android:showAsAction="never"
	    android:title="@string/action_remove_subscription" />
	<item
	    android:id="@+id/action_report"
	    android:showAsAction="never"
	    android:title="@string/action_report" />
</menu>